added css changed name

--- a/index.html
+++ b/index.html
@@ -12,15 +12,18 @@
     <main>
       <div class="home">
         <button class="launchBtn">Are you ready?</button>
+        <!-- welcome screen -->
         <div class="menu">
           <h1>Welcome to</h1>
+          <h2>Capyquest</h2>
           <button class="start">Start</button>
           <button class="options">Options</button>
           <button class="quit">Quit</button>
         </div>
+        <!-- options menu -->
         <div class="optionsScreen">
           <h1>Options</h1>
-          <div>
+          <div class="musicOption">
             <h2>Music</h2>
             0<input type="range" id="volume" />100
             <br />
@@ -39,7 +42,13 @@
             </label>
             on
           </div>
+          <div class="optionMenu">
+            <button class="optionBtns">Save</button>
+            <button class="optionBtns back">Back</button>
+          </div>
         </div>
+        <!-- game screen -->
+        <div></div>
       </div>
     </main>
   </body>
