forgot to push :)

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <p>
           Wow it looks so great on you! I'm so glad you chose to wear one.
           <br />
-          I'm not sure but you aura has changed.
+          I'm not sure but you aura has changed!
         </p>
         <p>You look at Amanda confused</p>
         <p>
@@ -140,6 +140,27 @@
         </p>
         <p>Before Amanda could finish her sentence a loud noise was heard</p>
         <button class="caveAmbush">Continue</button>
+      </div>
+      <!-- cave ambush -->
+      <div class="playerChoice">
+        <h1>What do you do?</h1>
+      </div>
+      <!-- Combat screen -->
+      <div class="combat">
+        <article>
+          <h1>Player hp:<span id="playerHealth"></span></h1>
+          <img src="./images/capyAngry.png" alt="Angry capybara" />
+          <article class="combatOptions">
+            <button id="attack">Attack</button>
+            <button id="special">Heal</button>
+            <button id="flee">Flee</button>
+          </article>
+        </article>
+        <article>
+          <h1>Enemy hp: <span id="enemyHealth"></span></h1>
+          <img src="" alt="Picture of enemy" id="enemy" />
+          <span id="enemyName"></span>
+        </article>
       </div>
     </main>
   </body>
