--- a/index.html
+++ b/index.html
@@ -37,9 +37,6 @@
           current volume:
           <span id="volumeValue">50%</span>
         </article>
-        <article>
-          <h2>Sound</h2>
-        </article>
         <article class="voiceOption">
           <h2>Voice Acting</h2>
           off
@@ -50,7 +47,7 @@
           on
         </article>
         <article class="optionMenu">
-          <button class="optionBtns">Save</button>
+          <button class="optionBtns save">Save</button>
           <button class="optionBtns back">Back</button>
         </article>
       </div>
@@ -162,6 +159,8 @@
           <span id="enemyName"></span>
         </article>
       </div>
+      <!-- map -->
+      <div id="map"></div>
     </main>
   </body>
 </html>
