working on map functions

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
+    <!-- main js -->
     <script defer src="./js/script.js"></script>
+    <!-- js for map function -->
+    <script defer src="./js/map.js"></script>
     <title>Home</title>
   </head>
   <body>
@@ -141,6 +144,30 @@
       <!-- cave ambush -->
       <div class="playerChoice">
         <h1>What do you do?</h1>
+      </div>
+      <div class="postCombat1">
+        <p>Oh wow look at you go little one you're so strong!</p>
+        <p>
+          But like I was saying before we were rudely interrupted. I came to
+          this land to study the purest form of magic. <br />
+          But I have been having trouble finding it. I have been looking for a
+          while now and I think I am close. I just need to find the <br />
+          right place to look.
+        </p>
+        <p>
+          But hey little buddy, I think you would be a great help to me. if we
+          finish this epic quest I will give you a reward! anything you want!
+          <br />
+          (probably not anything but I'll try my best)
+          <br />
+          (I don't know what I can give you but I'll try my best) <br />
+          (I think we should go now)
+          <br />
+          she sighs and looks at you with a smile, so what do you say? will you?
+          <br />
+        </p>
+        <button id="advYes">yes</button>
+        <button id="advNo">no</button>
       </div>
       <!-- Combat screen -->
       <div class="combat">
