--- a/index.html
+++ b/index.html
@@ -88,8 +88,9 @@
           <br />
           I know a very weird last name.... I am European!
           <br />
-          During my time walking here I found these strange looking hats. Would
-          you like to try one on?
+          During my time walking here I found these strange looking hats.
+          <br />
+          Would you like to try one on?
         </p>
         <button id="chooseClass">Yes</button>
         <button id="noClass">no</button>
@@ -172,8 +173,8 @@
       <!-- Combat screen -->
       <div class="combat">
         <article>
-          <h1>Player hp:<span id="playerHealth"></span></h1>
-          <img src="./images/capyAngry.png" alt="Angry capybara" />
+          <h1 class="healthBar">Player hp:<span id="playerHealth"></span></h1>
+          <img src="./images/capyAngry.png" alt="Angry capybara" id="angyCap" />
           <article class="combatOptions">
             <button id="attack">Attack</button>
             <button id="special">Heal</button>
@@ -181,7 +182,7 @@
           </article>
         </article>
         <article>
-          <h1>Enemy hp: <span id="enemyHealth"></span></h1>
+          <h1 class="healthBar">Enemy hp: <span id="enemyHealth"></span></h1>
           <img src="" alt="Picture of enemy" id="enemy" />
           <span id="enemyName"></span>
         </article>
